--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="background">
         <img src="img/Background.png" alt="">
     </div>
-    <a name="home"><header class="header"></a>
+    <header class="header">
         <a href="#home" class="header-logo">
             <img src="img/CARX TECHNOLIGES.png" alt="">
         </a>
