--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="background">
-        <img src="img/Background.png" alt="">
+        <a name="home"><img src="img/Background.png" alt=""></a>
     </div>
     <header class="header">
         <a href="#home" class="header-logo">
