--- a/index.html
+++ b/index.html
@@ -150,19 +150,22 @@
         <div class="button1">ХОЧУ РАБОТАТЬ</div>
         <div class="button2">ПАРТНЕРСТВО</div>
         <div class="button3">ПОДДЕРЖКА</div>
+
         <div class="name">
                     ИМЯ<br>
                 <input name="username" type="text" placeholder="Ваше имя" required>
         </div>
         <div class="email">
                     ПОЧТА<br>
-                <input name="email" type="text" placeholder="Ваша личная почта" required>
+                <input name="email" type="email" placeholder="Ваша личная почта" required>
         </div>
         <div class="message">
 				СООБЩЕНИЕ<br>
-			<textarea name="message" placeholder="Ваше сообщение" required></textarea>
+			    <input name="message" type="text" placeholder="Ваша личная почта" required>
         </div>
-        <div class="send">Написать</div>
+        <div class="send">
+            <input type="button" value="Написать">
+        </div>
     </div>
 
     <a name="contacts"><div class="section7"></a>
